final version before TAG
sensitivity analysis:
- handling simulation batch 3 in NetLogo with Behavior Space (instead of nlrx)
- tunning plots

--- a/demonstration.qmd
+++ b/demonstration.qmd
@@ -133,6 +133,7 @@ huts_plot <- ggplot(results_single) +
 grid.arrange(grazing_plot, huts_plot, nrow = 2)
 
 dev.off()
+rm(grazing_plot, huts_plot)
 ```
 
 ```{r}
